// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`picks different icon for external links 1`] = `
<Touchable
  accessibilityComponentType="button"
  accessibilityTraits={
    Array [
      "link",
    ]
  }
  delayPressIn={50}
  onPress={[Function]}
  style={
    Array [
      Object {
        "borderRadius": 5,
        "borderWidth": 0,
        "elevation": 3,
        "height": 100,
        "justifyContent": "center",
        "overflow": "hidden",
        "shadowColor": "rgba(0, 0, 0, 0.2)",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 3,
      },
      Object {
        "backgroundColor": "red",
      },
      Object {},
    ]
  }
>
  <ContentPadding
    padding={
      Object {
        "large": Object {
          "horizontal": 29,
          "vertical": 0,
        },
        "medium": Object {
          "horizontal": 20,
          "vertical": 0,
        },
        "small": Object {
          "horizontal": 18,
          "vertical": 0,
        },
      }
    }
    style={false}
  >
    <Component
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        color="blackColor"
        markdown={false}
        markdownStyle={Object {}}
        style={
          Object {
            "color": "#ffffff",
          }
        }
        type="h1"
      >
        Fruit...
      </Text>
      <Image
        source={1}
        style={
          Object {
            "alignSelf": "center",
            "marginLeft": 8,
            "transform": Array [
              Object {
                "translateY": -4,
              },
            ],
          }
        }
      />
    </Component>
    <Text
      color="blackColor"
      markdown={false}
      markdownStyle={Object {}}
      style={
        Object {
          "color": "#ffffff",
        }
      }
      type="h3"
    >
      Apples, Bananas, Tomatos
    </Text>
  </ContentPadding>
</Touchable>
`;

exports[`picks different icon for external links with contrast color 1`] = `
<Touchable
  accessibilityComponentType="button"
  accessibilityTraits={
    Array [
      "link",
    ]
  }
  delayPressIn={50}
  onPress={[Function]}
  style={
    Array [
      Object {
        "borderRadius": 5,
        "borderWidth": 0,
        "elevation": 3,
        "height": 100,
        "justifyContent": "center",
        "overflow": "hidden",
        "shadowColor": "rgba(0, 0, 0, 0.2)",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 3,
      },
      Object {
        "backgroundColor": "red",
      },
      Object {},
    ]
  }
>
  <ContentPadding
    padding={
      Object {
        "large": Object {
          "horizontal": 29,
          "vertical": 0,
        },
        "medium": Object {
          "horizontal": 20,
          "vertical": 0,
        },
        "small": Object {
          "horizontal": 18,
          "vertical": 0,
        },
      }
    }
    style={false}
  >
    <Component
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        color="blackColor"
        markdown={false}
        markdownStyle={Object {}}
        style={
          Object {
            "color": "#2d2f7f",
          }
        }
        type="h1"
      >
        Fruit...
      </Text>
      <Image
        source={1}
        style={
          Object {
            "alignSelf": "center",
            "marginLeft": 8,
            "transform": Array [
              Object {
                "translateY": -4,
              },
            ],
          }
        }
      />
    </Component>
    <Text
      color="blackColor"
      markdown={false}
      markdownStyle={Object {}}
      style={
        Object {
          "color": "#2d2f7f",
        }
      }
      type="h3"
    >
      Apples, Bananas, Tomatos
    </Text>
  </ContentPadding>
</Touchable>
`;

exports[`renders correctly 1`] = `
<Touchable
  accessibilityComponentType="button"
  accessibilityTraits={
    Array [
      "link",
    ]
  }
  delayPressIn={50}
  onPress={[Function]}
  style={
    Array [
      Object {
        "borderRadius": 5,
        "borderWidth": 0,
        "elevation": 3,
        "height": 100,
        "justifyContent": "center",
        "overflow": "hidden",
        "shadowColor": "rgba(0, 0, 0, 0.2)",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 3,
      },
      Object {
        "backgroundColor": "red",
      },
      Object {},
    ]
  }
>
  <ContentPadding
    padding={
      Object {
        "large": Object {
          "horizontal": 29,
          "vertical": 0,
        },
        "medium": Object {
          "horizontal": 20,
          "vertical": 0,
        },
        "small": Object {
          "horizontal": 18,
          "vertical": 0,
        },
      }
    }
    style={false}
  >
    <Component
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        color="blackColor"
        markdown={false}
        markdownStyle={Object {}}
        style={
          Object {
            "color": "#ffffff",
          }
        }
        type="h1"
      >
        Fruit...
      </Text>
      <Image
        source={1}
        style={
          Object {
            "alignSelf": "center",
            "marginLeft": 8,
            "transform": Array [
              Object {
                "translateY": -4,
              },
            ],
          }
        }
      />
    </Component>
    <Text
      color="blackColor"
      markdown={false}
      markdownStyle={Object {}}
      style={
        Object {
          "color": "#ffffff",
        }
      }
      type="h3"
    >
      Apples, Bananas, Tomatos
    </Text>
  </ContentPadding>
</Touchable>
`;
